--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "css-loader": "6.8.1",
+    "handlebars-loader": "^1.7.3",
     "html-webpack-plugin": "5.5.3",
     "sass": "1.64.1",
     "sass-loader": "13.3.2",
